fixed broken subscribe field on small screens

--- a/wp-content/themes/sixgill/less/desktop_footer.less
+++ b/wp-content/themes/sixgill/less/desktop_footer.less
@@ -24,7 +24,7 @@
 
 .footer-top-block-right {
 	/*width: 25%;*/
-	width: 180px;
+	width: 165px;
 	margin-left: 60px;
 }
 
